Fixed alignment issue.

--- a/src/scss/components/pagination.scss
+++ b/src/scss/components/pagination.scss
@@ -14,11 +14,11 @@
     
     &__next {
         position: absolute;
-        left: 0;
+        left: 3rem;
     }
     
     &__prev {
         position: absolute;
-        right: 0;
+        right: 3rem;
     }
 }
